src/objects/Retry_Log__c.object
<CustomObject>
    <fields>
        <fullName>Access_Set_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Access Set Assignment</label>
        <referenceTo>Access_Set_Assignment__c</referenceTo>
        <relationshipLabel>Retry Logs</relationshipLabel>
        <relationshipName>Retry_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Team</label>
        <referenceTo>Teams__c</referenceTo>
        <relationshipLabel>Retry Logs</relationshipLabel>
        <relationshipName>Retry_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retry_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Retry Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Team Creation</fullName>
                </value>
                <value>
                    <fullName>Account Team Grant Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Retry Log</label>
    <nameField>
        <displayFormat>RL-{0000000000}</displayFormat>
        <label>Retry Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retry Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>